@@ -1,27 +1,27 @@
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
-import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 plugins {
-    alias(libs.plugins.kotlinMultiplatform)
-    alias(libs.plugins.androidApplication)
-    alias(libs.plugins.jetbrainsCompose)
-    alias(libs.plugins.compose.compiler)
     alias(libs.plugins.kover)
     alias(libs.plugins.serialization)
+    alias(libs.plugins.jetbrainsCompose)
+    alias(libs.plugins.compose.compiler)
+    alias(libs.plugins.androidApplication)
+    alias(libs.plugins.kotlinMultiplatform)
+    id("com.google.gms.google-services")
+    id("com.google.firebase.crashlytics")
 }
 
 val testAttribute: Attribute<String> = Attribute.of("key", String::class.java)
 
 kotlin {
     androidTarget {
-        @OptIn(ExperimentalKotlinGradlePluginApi::class)
         compilerOptions {
-            jvmTarget.set(JvmTarget.JVM_11)
+            jvmTarget.set(JvmTarget.JVM_17)
         }
     }
 
-    jvm("desktop") {
+    jvm(name = "desktop") {
         attributes.attribute(testAttribute, "desktop")
     }
 
@@ -31,46 +31,61 @@ kotlin {
 
         androidMain.dependencies {
             implementation(compose.preview)
-            implementation(libs.androidx.activity.compose)
-            implementation(libs.kotlinx.collections.immutable)
-            implementation(libs.kotlinx.serialization.json)
             implementation(libs.kotlin.serialization)
-            implementation(libs.androidx.activity.ktx)
+            implementation(libs.jackson.module.kotlin)
             implementation(libs.androidx.fragment.ktx)
+            implementation(libs.androidx.activity.ktx)
+            implementation(libs.androidx.activity.compose)
+            implementation(libs.kotlinx.serialization.json)
+            implementation(libs.kotlinx.collections.immutable)
         }
         commonMain.dependencies {
-            implementation(compose.runtime)
-            implementation(compose.foundation)
-            implementation(compose.material)
             implementation(compose.ui)
-            implementation(compose.components.resources)
-            implementation(compose.components.uiToolingPreview)
+            implementation(compose.preview)
+            implementation(compose.runtime)
+            implementation(compose.material)
+            implementation(compose.foundation)
             implementation(libs.kotter.library)
-            implementation(libs.kotlinx.collections.immutable)
-            implementation(libs.kotlinx.serialization.json)
             implementation(libs.kotlin.serialization)
+            implementation(libs.jackson.module.kotlin)
+            implementation(compose.components.resources)
+            implementation(libs.androidx.material3.common)
+            implementation(libs.kotlinx.serialization.json)
+            implementation(libs.kotlinx.collections.immutable)
+            implementation(compose.components.uiToolingPreview)
+        }
+        commonTest.dependencies {
+            implementation(libs.mockk.library)
+            implementation(libs.junit.jupiter.api)
+            implementation(libs.junit.jupiter.platformlauncher)
         }
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.jackson.module.kotlin)
+
+            implementation(libs.mockk.library)
+            implementation(libs.junit)
+            implementation(libs.junit.jupiter.api)
+            implementation(libs.junit.jupiter.platformlauncher)
         }
         desktopTest.dependencies {
-            koverReport {
-                defaults {
-                    mergeWith("release")
-                }
-            }
             implementation(kotlin("test-common"))
             implementation(kotlin("test-annotations-common"))
-            api(libs.mockk.library)
-            api(libs.junit.jupiter.api)
-            api(libs.junit.jupiter.params)
-            api(libs.junit.jupiter.engine)
+            implementation(libs.kover)
+            implementation(libs.mockk.library)
+            implementation(libs.junit.jupiter)
             implementation(libs.junit)
-            api(libs.junit.jupiter)
-            api(libs.kotlinx.coroutines.test)
-            api(libs.kover)
+            implementation(libs.junit.jupiter.api)
+            implementation(libs.junit.jupiter.params)
+            implementation(libs.junit.jupiter.engine)
+            implementation(libs.kotlinx.coroutines.test)
+            implementation(libs.junit.jupiter.platformlauncher)
         }
+    }
+    sourceSets.androidMain.dependencies {
+        implementation(libs.mockk.library)
+        implementation(libs.junit.jupiter.api)
+        implementation(kotlin("test"))
     }
 }
 
@@ -81,32 +96,39 @@ compose.resources {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 android {
     namespace = "org.hmeadow.fittonia"
     compileSdk = libs.versions.android.compileSdk.get().toInt()
 
-    sourceSets["main"].manifest.srcFile("src/androidMain/AndroidManifest.xml")
     sourceSets["main"].res.srcDirs("src/androidMain/res")
     sourceSets["main"].resources.srcDirs("src/commonMain/resources")
+    sourceSets["main"].manifest.srcFile("src/androidMain/AndroidManifest.xml")
 
     defaultConfig {
         applicationId = "org.hmeadow.fittonia"
         minSdk = libs.versions.android.minSdk.get().toInt()
         targetSdk = libs.versions.android.targetSdk.get().toInt()
-        versionCode = 1
-        versionName = "1.0"
+        versionCode = 6
+        versionName = "0.4.0"
+        buildConfigField("long", "BUILDTIMESTAMP", "${System.currentTimeMillis()}L")
     }
     packaging {
         resources {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
+            merges += "META-INF/LICENSE.md"
+            merges += "META-INF/LICENSE-notice.md"
         }
     }
     buildTypes {
         getByName("release") {
-            isMinifyEnabled = false
+            // isMinifyEnabled = true
+            // isShrinkResources = true
             isDebuggable = false
+            signingConfig = signingConfigs.getByName("debug")
+            // proguardFiles.add(file("proguard-rules.pro"))
         }
         getByName("debug") {
             isMinifyEnabled = false
@@ -115,8 +137,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     buildFeatures {
         compose = true
@@ -142,20 +164,43 @@ compose.desktop {
 val ktlint = configurations.create("ktlint")
 
 dependencies {
-    implementation(libs.androidx.material3.android)
-    implementation(libs.androidx.security.crypto)
-    implementation(libs.androidx.documentfile)
     ktlint(libs.ktlintlib)
     implementation(libs.androidx.datastore)
-    implementation(libs.kotlinx.collections.immutable)
-    implementation(libs.kotlinx.serialization.json)
     implementation(libs.kotlin.serialization)
+    implementation(libs.androidx.documentfile)
+    implementation(libs.androidx.security.crypto)
+    implementation(libs.androidx.core.splashscreen)
+    implementation(libs.androidx.material3.android)
+    implementation(libs.kotlinx.serialization.json)
+    implementation(libs.kotlinx.collections.immutable)
+
+    // Firebase & Crashlytics
+    implementation(libs.firebase.analytics)
+    implementation(libs.firebase.crashlytics)
+    implementation(platform(libs.firebase.bom))
+
+    // Tests
+    androidTestImplementation(libs.junit)
+    androidTestImplementation(kotlin("test"))
+    androidTestImplementation(libs.mockk.library)
+    androidTestImplementation(libs.junit.jupiter.api)
+    androidTestImplementation(libs.junit.jupiter.platformlauncher)
+}
+
+kover {
+    reports {
+        filters {
+            excludes {
+                androidGeneratedClasses()
+            }
+        }
+    }
 }
 
 val ktlintOutputDir = "${project.layout.buildDirectory}/reports/ktlint/"
 val ktlintInputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
 
-val ktlintCheck by tasks.creating(JavaExec::class) {
+tasks.register("ktlintCheck", JavaExec::class) {
     inputs.files(ktlintInputFiles)
     outputs.dir(ktlintOutputDir)
 
